# elsa-fyp

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  config.h.in  deployment_server.py  psql  style_guide.md
client/include/: utils.h
client/src/: client.cpp  utils.cpp
client_sdk/: CMakeLists.txt  precompiled.h
client_sdk/include/: fix_client.h  order.h  server_response.h  test_client.h  test_server.h
client_sdk/src/: fix_client.cpp
client_sdk/unit_test/: CMakeLists.txt  precompiled.h  test.cpp
configs/backend/hk01/: backend.toml
configs/gateway/hk1/: example_config_server.cfg
configs/matching_engine/hk01/: matching_engine01.toml
configs/mdp/hk01/: mdp01.toml  mdp1.toml
configs/order_manager/hk01/: order_manager01.toml
configs/test_client/: example_config_client.cfg
examples/: CMakeLists.txt
frontend/: package-lock.json
frontend-v2/: README.md  package-lock.json  package.json
frontend-v2/public/: index.html
frontend-v2/src/: App.css  App.js  api.js  index.js
frontend-v2/src/components/: NavbarLayout.js  OrderBook.js  RecentTrades.js  StarField.js  TickerSelector.js  TradePanel.js
frontend-v2/src/context/: AuthContext.js
frontend-v2/src/hooks/: useWebSocket.js
frontend-v2/src/pages/: AccountPage.css  AccountPage.js  AuthPage.css  HomePage.css  HomePage.js  LobbyPage.css  LobbyPage.js  LoginPage.js  SignUpPage.js
frontend/public/: index.html  manifest.json
frontend/src/: App.js  index.css
integration_test/: CMakeLists.txt  precompiled.h  test_end_to_end.cpp  test_sdk_with_server.cpp
libs/benchmarks/: CMakeLists.txt  benchmarks.cpp  websocket_benchmark.cpp
libs/configuration/: backend_config.h  gateway_config.h  matching_engine_config.h  mdp_config.h  order_manager_config.h  simulation_config.h
libs/core/: constants.h  containers.h  orderbook_snapshot.h  orders.h  service.h  spinlock_mutex.h  thread_safe_queue.h  trade.h
libs/database/: database_client.h
libs/inter_process/: mpsc_shared_memory_ring_buffer.h
libs/logger/: logger.h
libs/transport/: inbound_server.h  inbound_websocket_server.h  message_format.h  messages.h  messaging.h  outbound_client.h  outbound_websocket_client.h  pods.h  websocket.h  websocket_client.h  websocket_server.h
libs/transport/protobufs/: containers.pb.cc  containers.pb.h  containers.proto
libs/transport/websocket/: CMakeLists.txt  websocket.h  websocket_client.h  websocket_server.h
libs/unit_test/: CMakeLists.txt  test_client.cpp  test_client_server_ping_pong.cpp  test_database_client.cpp  test_interactive_client.cpp  test_interactive_server.cpp  test_mpsc.h  test_mpsc_consumer.cpp  test_mpsc_producer.cpp  test_server.cpp  test_thread_safe_queue.cpp  test_two_client_one_server.cpp
libs/uuid/: uuid.h
matching_engine/src/: limit_order_book.h
report/: FYP Documents.md  FYP Final Report Guidelines.html  final_report.aux  final_report.fdb_latexmk  final_report.fls  final_report.tex  final_report.toc
report/simulation_results/: advanced_analyze.py  analyze.py  stats.py  trades.csv
scripts/: build.sh  build_benchmark.sh  build_examples.sh  build_test.sh  deploy_backend.sh  deploy_deployment_server.sh  deploy_frontend.sh  init_databases.sh  run_database_tests.sh  setup.sh
scripts/db_scripts/: init_postgresql.sql  init_questdb.sql
services/backend_service/: CMakeLists.txt  main.cpp  queries.h  request_handler.cpp  request_handler.h  uat_seeder.h
services/backend_service/unit_test/: CMakeLists.txt  test_backend_service_with_mock_data.cpp
services/gateway/: CMakeLists.txt  precompiled_exec.h  precompiled_lib.h
services/gateway/src/: gateway_application.cpp  gateway_application.h  id_generator.h  main.cpp
services/gateway/unit_test/: CMakeLists.txt  precompiled.h  test.cpp
services/market_data_processor/: CMakeLists.txt  precompiled_lib.h
services/market_data_processor/src/: main.cpp  market_data_processor.cpp  market_data_processor.h
services/market_data_processor/unit_test/: CMakeLists.txt  test_md_producer.cpp  test_mdp_client.cpp
services/matching_engine/: CMakeLists.txt  precompiled_exec.h  precompiled_lib.h
services/matching_engine/benchmarks/: CMakeLists.txt  benchmarks.cpp
services/matching_engine/src/: flat_vector_limit_order_book.cpp  flat_vector_limit_order_book.h  inbound_server.h  inbound_websocket_server.h  limit_order_book.cpp  limit_order_book.h  main.cpp  matching_engine.cpp  matching_engine.h  order.cpp  order.h  publisher.h  shared_memory_publisher.h  shm_trade_publisher.h  trade_publisher.h  vector_limit_order_book.cpp  vector_limit_order_book.h
services/matching_engine/unit_test/: CMakeLists.txt  flat_vector_limit_order_book_test.cpp  limit_order_book_test.cpp  matching_engine_test.cpp  order_test.cpp  precompiled.h  vector_limit_order_book_test.cpp
services/order_manager/: CMakeLists.txt  precompiled_exec.h  precompiled_lib.h
services/order_manager/benchmarks/: CMakeLists.txt  benchmarks.cpp
services/order_manager/src/: balance_checker.cpp  balance_checker.h  database_client_wrapper.h  main.cpp  order_manager.cpp  order_manager.h  order_manager_database.h
services/order_manager/unit_test/: CMakeLists.txt  balance_checker_test.cpp  order_manager_test.cpp
simulation/deployment/: CMakeLists.txt  create_n_informed_traders.cpp  create_n_market_makers.cpp  create_n_market_makers.cpp.orig  create_n_noise_traders.cpp  create_oracle.cpp
simulation/tests/: CMakeLists.txt  test_informed_trader.cpp  test_market_maker.cpp  test_noise_trader.cpp  test_oracle.cpp
simulation/traders/: CMakeLists.txt  informed_trader.h  market_maker.h  noise_trader.cpp  noise_trader.h  oracle_service.h
template/: backend.service  backend.toml  deployment_server.service  frontend.service  gateway.service  gateway.toml  gateway_server.cfg  it.service  mdp.service  mdp.toml  me.service  me.toml  mm.service  nt.service  oms.service  oms.toml  oracle.service
